tests/snapshots/integration_tests__error_arity_mismatch.snap
---
source: tests/integration_tests.rs
expression: error_text
---
ArityMismatch { expected: 3, got: 2, context: "Test:  tuple unpacking" }

UnknownNode { node: "in", context: "Test" }

UnknownNode { node: "a", context: "Test" }

UnknownNode { node: "a", context: "Test" }
