tests/snapshots/integration_tests__error_missing_neuron.snap
---
source: tests/integration_tests.rs
expression: error_text
---
MissingNeuron { name: "MissingNeuron", context: "Test" }

UnknownNode { node: "in", context: "Test" }

MissingNeuron { name: "MissingNeuron", context: "Test" }

MissingNeuron { name: "MissingNeuron", context: "Test" }
