tests/snapshots/integration_tests__error_parse_failure.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Expected { expected: "COMMENT, colon, or lparen", found: "unexpected input", span: SourceSpan { offset: SourceOffset(12), length: 1 } }
