tests/snapshots/integration_tests__example_01-comments.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron AnotherTest:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Identity

neuron CommentTest(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,nn/Identity
