tests/snapshots/integration_tests__example_02-imports.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Uses ===
use nn::* (source: core)
use activations::* (source: core)
use transformers::* (source: models)
use nn::Linear (source: core)

=== Neurons ===

neuron ImportTest:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  impl:
    Source: core,nn/Identity
