tests/snapshots/integration_tests__example_03-parameters.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DifferentDefaults(size, rate = 0.1, count = 42, name = "default", enabled = true):
  inputs:
    default: [*, size]
  outputs:
    default: [*, size]
  impl:
    Source: core,nn/Identity

neuron Mixed(dim, hidden, dropout = 0.5, bias = true):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, hidden]
  impl:
    Source: core,nn/Linear

neuron MultipleParams(in_dim, out_dim, hidden):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron NegativeDefaults(dim, offset = (0 - 1), scale = (0 - 0.5)):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,nn/Identity

neuron NoParams:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 512]
  impl:
    Source: core,nn/Identity

neuron OneParam(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,nn/Identity

neuron WithDefaults(dim, dropout = 0.1, scale = 2):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, (dim * scale)]
  impl:
    Source: core,nn/Linear
