tests/snapshots/integration_tests__example_04-shapes.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron AddExpressions(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim + 512)]
  impl:
    Source: core,nn/Linear

neuron ComplexShape(batch, seq, dim):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, (dim * 4)]
  impl:
    Source: core,nn/Linear

neuron DivExpressions(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim / 2)]
  impl:
    Source: core,nn/Linear

neuron Expressions(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, (dim * 4)]
  impl:
    Source: core,nn/Linear

neuron Literals:
  inputs:
    default: [512]
  outputs:
    default: [256, 128]
  impl:
    Source: core,nn/Linear

neuron Named(batch, seq, dim):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  impl:
    Source: core,nn/Identity

neuron Scalar:
  inputs:
    default: []
  outputs:
    default: []
  impl:
    Source: core,nn/Identity

neuron Variadic:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Identity

neuron VariadicNamed:
  inputs:
    default: [*batch, seq, dim]
  outputs:
    default: [*batch, seq, dim]
  impl:
    Source: core,nn/Identity

neuron Wildcard:
  inputs:
    default: [*, 512]
  outputs:
    default: [*, 256]
  impl:
    Source: core,nn/Linear
